fixed footer : centered, modif scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,15 @@
     --text-color: #fbf5ff;
     --text-op-color: #fbf5ffbe;
 }
+
+body::-webkit-scrollbar {
+    width: 0.5rem;
+}
+
+body::-webkit-scrollbar-track {
+    background-color: var(--bg-color)
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: var(--secondary-color);
+}
